Fixed text alignment issue

--- a/src/components/styles/Home.module.scss
+++ b/src/components/styles/Home.module.scss
@@ -1,201 +1,201 @@
 @import "../../assets/colors.scss";
 
-.Content{
-    width: 100%;
-    height: 652px;
-    margin-top: 48px;
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    justify-content: center;
+.Content {
+  width: 100%;
+  height: 652px;
+  margin-top: 48px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.Content{
-
-    h1{
-        // font-size: 4.5em;
-        font-size: clamp(60px, 10vw, 70px);
-        font-weight: 700;
-        z-index: 3;
-        span{
-            background: main-gradient(315deg);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
+.Content {
+  h1 {
+    // font-size: 4.5em;
+    font-size: clamp(60px, 10vw, 70px);
+    font-weight: 700;
+    z-index: 3;
+    span {
+      background: main-gradient(315deg);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
+  }
 
-    h2{
-        z-index: 3;
-    }
+  h2 {
+    z-index: 3;
+  }
 
-    p{
-        width: 45%;
-        margin-top: 20px;
-        opacity: 0.42;
-        font-weight: 300;
-    }
-
+  p {
+    width: 45%;
+    margin-top: 20px;
+    opacity: 0.42;
+    font-weight: 300;
+  }
 }
 
-.BtnGroup{
-    display: flex;
-    gap: 20px;
-    margin-top: 50px;
-    button{
-        padding: 15px 30px;
-        background-color: transparent;
-        font-size: 1.1em;
-        font-weight: 500;
-        border: none;
-        outline-width: 0px;
-        cursor: pointer;
-    }
+.BtnGroup {
+  display: flex;
+  gap: 20px;
+  margin-top: 50px;
+  button {
+    padding: 15px 30px;
+    background-color: transparent;
+    font-size: 1.1em;
+    font-weight: 500;
+    border: none;
+    outline-width: 0px;
+    cursor: pointer;
+  }
 }
 
-.MainBtn{
-   position: relative;
-   cursor: pointer;
-   padding: 0;
-   border-radius: 10px;
-   background-color: rgb(255, 255, 255,0.5);
-   z-index: 2;
-   text-decoration: none;
+.MainBtn {
+  position: relative;
+  cursor: pointer;
+  padding: 0;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255, 0.5);
+  z-index: 2;
+  text-decoration: none;
 }
 
-.SubBtn{
-    text-decoration: none;
+.SubBtn {
+  text-decoration: none;
 }
 
-.MainBtn::before,.MainBtn::after, .MainBtn > .BtnBorder{
-    border-radius: inherit;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 500ms;
-    width:100%;
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 0;
+.MainBtn::before,
+.MainBtn::after,
+.MainBtn > .BtnBorder {
+  border-radius: inherit;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 500ms;
+  width: 100%;
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
 }
 
-.MainBtn > .BtnBorder{
-    background: radial-gradient(
+.MainBtn > .BtnBorder {
+  background: radial-gradient(
     400px circle at var(--mouse-x) var(--mouse-y),
-    rgba(27,6,113,1),
+    rgba(27, 6, 113, 1),
     transparent 40%
   );
   z-index: 2;
 }
 
 .MainBtn:hover::before,
-.MainBtn:hover > .BtnBorder{
+.MainBtn:hover > .BtnBorder {
   opacity: 1;
 }
 
-.MainBtn:hover::after{
-    opacity: 0.5;
+.MainBtn:hover::after {
+  opacity: 0.5;
 }
 
-.MainBtn::before{
-    background: radial-gradient(
+.MainBtn::before {
+  background: radial-gradient(
     200px circle at var(--mouse-x) var(--mouse-y),
-    rgba(114,18,143,0.25),
+    rgba(114, 18, 143, 0.25),
     transparent 40%
   );
   z-index: 4;
 }
 
-.MainBtn::after{
-    transform-origin: center;
-    transform: scale(1.1);
-    background: radial-gradient(
+.MainBtn::after {
+  transform-origin: center;
+  transform: scale(1.1);
+  background: radial-gradient(
     200px circle at var(--mouse-x) var(--mouse-y),
-    rgba(27,6,113,1),
+    rgba(27, 6, 113, 1),
     transparent 40%
   );
   filter: blur(10px);
   z-index: 1;
 }
 
-.MainBtn > .BtnContent{
-    background-color: rgb(0,0,0);
-    border-radius: inherit;
-    height: calc(100% - 2px);
-    // width: calc(100% - 2px);
-    position: relative;
-    margin: 1px; 
-    z-index: 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 15px 30px;
-    font-weight: 500;
+.MainBtn > .BtnContent {
+  background-color: rgb(0, 0, 0);
+  border-radius: inherit;
+  height: calc(100% - 2px);
+  // width: calc(100% - 2px);
+  position: relative;
+  margin: 1px;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 15px 30px;
+  font-weight: 500;
+}
+
+.HeroImg {
+  position: absolute;
+  top: 45%;
+  right: 0;
+  transform: translateY(-50%);
+  width: fit-content;
+  img {
+    width: 500px;
+    z-index: 2;
   }
 
-
-  .HeroImg{
+  .Glow {
+    z-index: 1;
+    width: 200px;
+    height: 200px;
     position: absolute;
-    top: 45%;
-    right: 0;
-    transform: translateY(-50%);
-    width: fit-content;
-    img{
-        width: 500px;
-        z-index: 2;
+    &:nth-child(1) {
+      @include magenta-glow;
+      transform: translate(-40%, -40%);
     }
-
-    .Glow{
-        z-index: 1;
-        width: 200px;
-        height: 200px;
-        position: absolute;
-        &:nth-child(1){
-            @include magenta-glow;
-            transform: translate(-40%,-40%);
-        }
-        &:nth-child(2){
-            @include magenta-glow;
-            right: 0;
-            bottom: 0;
-            transform: translate(40%,40%);
-        }
+    &:nth-child(2) {
+      @include magenta-glow;
+      right: 0;
+      bottom: 0;
+      transform: translate(40%, 40%);
     }
   }
+}
 
 @media screen and (max-width: 930px) {
-    .HeroImg{
-        // display: none;
-        position:absolute;
-        transform: unset;
-        top: 40px;
-        // right: 0;
-        right: unset;
-        left: 50%;
-        transform: translateX(-50%);
-        img{
-            width: 300px;
-        }
+  .HeroImg {
+    // display: none;
+    position: absolute;
+    transform: unset;
+    top: 40px;
+    // right: 0;
+    right: unset;
+    left: 50%;
+    transform: translateX(-50%);
+    img {
+      width: 300px;
     }
+  }
 
-    .Content p{
-        width: 90%;
-        font-size: 15px;
-    }
+  .Content p {
+    width: 90%;
+    font-size: 15px;
+  }
 
-    .BtnGroup{
-        flex-direction: column;
-        .SubBtn{
-            background: main-gradient(315deg);
-            border-radius: 10px;
-        }
+  .BtnGroup {
+    flex-direction: column;
+    .SubBtn {
+      background: main-gradient(315deg);
+      border-radius: 10px;
+      text-align: center;
     }
+  }
 }
 
 @media screen and (max-width: 530px) {
-    .Content{
-        justify-content: end;
-        padding-bottom: 50px;
-    }
+  .Content {
+    justify-content: end;
+    padding-bottom: 50px;
+  }
 }
